--- a/style.css
+++ b/style.css
@@ -938,3 +938,150 @@ h4 {
     padding: 6rem 2rem;
   }
 }
+
+/* 
+The transform CSS property lets you rotate, scale, skew, or translate an element. It modifies the coordinate space of the CSS visual formatting model.
+*/
+
+/* 
+The @keyframes CSS at-rule controls the intermediate steps in a CSS animation sequence by defining styles for keyframes (or waypoints) along the animation sequence. This gives more control over the intermediate steps of the animation sequence than transitions.
+
+Syntax:
+
+@keyframes slidein {
+  from {
+    transform: translateX(0%);
+  }
+
+  to {
+    transform: translateX(100%);
+  }
+}
+
+from--> A starting offset of 0%.
+
+to --> An ending offset of 100%.
+
+Properties that aren't specified in every keyframe are interpolated if possible — properties that can't be interpolated are dropped from the animation. For example:
+
+@keyframes identifier {
+  0% {
+    top: 0;
+    left: 0;
+  }
+  30% {
+    top: 50px;
+  }
+  68%,
+  72% {
+    left: 50px;
+  }
+  100% {
+    top: 100px;
+    left: 100%;
+  }
+}
+
+*/
+
+/* 
+The ::-webkit-scrollbar CSS pseudo-element affects the style of an element's scrollbar when it has overflow:scroll; set.
+
+CSS Scrollbar Selectors
+You can use the following pseudo-elements to customize various parts of the scrollbar for WebKit browsers:
+
+# ::-webkit-scrollbar — the entire scrollbar.
+# ::-webkit-scrollbar-button — the buttons on the scrollbar (arrows pointing upwards and downwards that scroll one line at a time).
+# ::-webkit-scrollbar-thumb — the draggable scrolling handle.
+# ::-webkit-scrollbar-track — the track (progress bar) of the scrollbar, where there is a gray bar on top of a white bar.
+# ::-webkit-scrollbar-track-piece — the part of the track (progress bar) not covered by the handle.
+# ::-webkit-scrollbar-corner — the bottom corner of the scrollbar, where both horizontal and vertical scrollbars meet. This is often the bottom-right corner of the browser window.
+# ::-webkit-resizer — the draggable resizing handle that appears at the bottom corner of some elements.
+
+*/
+
+/*
+ Class selectors
+The CSS class selector matches elements based on the contents of their class attribute.
+
+All elements with class="spacious" 
+
+.spacious {
+  margin: 2em;
+}
+
+All <li> elements with class="spacious" 
+
+li.spacious {
+  margin: 2em;
+}
+
+All <li> elements with a class list that includes both "spacious" and "elegant" 
+For example, class="elegant retro spacious"
+
+li.spacious.elegant {
+  margin: 2em;
+}
+
+*/
+
+/* What are Pseudo-classes? -- A pseudo-class is used to define a special state of an element.
+
+For example, it can be used to:
+
+Style an element when a user mouses over it
+Style visited and unvisited links differently
+Style an element when it gets focus
+
+The syntax of pseudo-classes:
+
+selector:pseudo-class {
+  property: value;
+}
+
+Anchor Pseudo-classes
+Links can be displayed in different ways:
+
+Example
+ unvisited link 
+a:link {
+  color: #FF0000;
+}
+
+ visited link 
+a:visited {
+  color: #00FF00;
+}
+
+ mouse over link 
+a:hover {
+  color: #FF00FF;
+}
+
+selected link 
+a:active {
+  color: #0000FF;
+} */
+
+/* What are Pseudo-Elements?
+A CSS pseudo-element is used to style specified parts of an element.
+
+For example, it can be used to:
+
+Style the first letter, or line, of an element
+Insert content before, or after, the content of an element
+
+The syntax of pseudo-elements:
+
+selector::pseudo-element {
+  property: value;
+}
+
+All CSS Pseudo Elements
+
+::after,	p::after --	Insert something after the content of each <p> element
+::before,	p::before -- Insert something before the content of each <p> element
+::first-letter,	p::first-letter --	Selects the first letter of each <p> element
+::first-line,	p::first-line --	Selects the first line of each <p> element
+::marker,	::marker --	Selects the markers of list items
+::selection,	p::selection --	Selects the portion of an element that is selected by a user */
