--- a/style.css
+++ b/style.css
@@ -59,17 +59,15 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  /* color: #444; */
   color: rgb(209, 213, 219);
   line-height: 1.9;
-  /* background-color: #f3f3f3; */
   background-color: rgb(17, 24, 39);
   overflow-x: hidden;
 }
 
 .section {
   padding: 15rem 3rem;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid rgba(7, 9, 15, 0.7);
   transition: transform 1s, opacity 1s;
 }
 
@@ -184,7 +182,6 @@ img {
 
 .nav.sticky {
   position: fixed;
-  /* background-color: rgba(255, 255, 255, 0.75); */
   background-color: rgba(31, 41, 55, 0.75);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -334,7 +331,7 @@ h4 {
   width: 100%;
   z-index: -1;
   opacity: 0.7;
-  transform: scale(1.07, 1.05) skewX(-15deg); /* skew for rombos */
+  transform: scale(1.07, 1.05) skewX(-15deg);
   background-image: var(--gradient-primary);
 }
 
@@ -393,7 +390,6 @@ h4 {
 .operations {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
-  /* background-color: #fff; */
   background-color: rgb(31, 41, 55);
 }
 
@@ -534,7 +530,6 @@ h4 {
   top: 50%;
   z-index: 10;
   border: none;
-  /* background: rgba(255, 255, 255, 0.7); */
   background-color: rgb(17, 24, 39);
   font-family: inherit;
   color: #333;
@@ -543,6 +538,7 @@ h4 {
   width: 5.5rem;
   font-size: 3.25rem;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 .slider__btn:hover {
@@ -616,6 +612,11 @@ h4 {
   font-size: 1.7rem;
   margin-bottom: 3.5rem;
   color: #666;
+  transition: all 0.5s;
+}
+
+.testimonial__text:hover {
+  color: rgb(209, 213, 219);
 }
 
 .testimonial__author {
@@ -720,7 +721,6 @@ h4 {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 60rem;
-  /* background-color: #f3f3f3; */
   background-color: rgb(17, 24, 39);
   padding: 5rem 6rem;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
@@ -853,7 +853,6 @@ h4 {
   .nav__links.nav__open {
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(255, 255, 255); */
     background-color: rgb(17, 24, 39);
     position: absolute;
     height: 100vh;
@@ -1003,7 +1002,6 @@ h4 {
 
   .modal {
     max-width: 50rem;
-    background-color: #f3f3f3;
     padding: 6rem 2rem;
   }
 }
